[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/art/specialscroll.png" type="Texture" id=2]
[ext_resource path="res://src/objects/SpecialRecipe.gd" type="Script" id=4]
[ext_resource path="res://src/fonts/BetterGrade-519DV.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/fonts/Runalto.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/fonts/Myfontrunes-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 333.333, 492.593 )

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 1
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 400
outline_size = 5
outline_color = Color( 0.772549, 0.14902, 0.14902, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 288
outline_color = Color( 0.772549, 0.14902, 0.14902, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 150
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="Recipe" type="RigidBody2D"]
script = ExtResource( 4 )

[node name="Specialscroll" type="Sprite" parent="."]
scale = Vector2( 0.206171, 0.206171 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.19209e-07, 3.63588e-06 )
scale = Vector2( 0.27, 0.27 )
shape = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -86.0
margin_top = -113.0
margin_right = 564.0
margin_bottom = -2.0
rect_scale = Vector2( 0.255025, 0.25371 )
custom_fonts/font = SubResource( 1 )
text = "INVISIBILITY"
clip_text = true

[node name="Label2" type="Label" parent="Node2D"]
margin_left = -83.0
margin_top = -112.0
margin_right = 1417.0
margin_bottom = 224.0
rect_scale = Vector2( 0.104771, 0.104771 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "GIANTIV"

[node name="RecipeAddStep" type="Label" parent="Node2D"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -18.0
margin_top = -80.0
margin_right = 1482.0
margin_bottom = 256.0
rect_scale = Vector2( 0.104771, 0.104771 )
custom_fonts/font = SubResource( 5 )
text = "XASIO"

[node name="Steps" type="Label" parent="Node2D"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -85.0
margin_top = -83.0
margin_right = 715.0
margin_bottom = 894.0
rect_scale = Vector2( 0.206171, 0.206171 )
custom_fonts/font = SubResource( 3 )
text = "1. Add water
2. Add crushed mushroom
3. Heat for 2 seconds
4. Shake well"
autowrap = true

[node name="Steps2" type="Label" parent="Node2D"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -84.0
margin_top = -77.0
margin_right = 816.0
margin_bottom = 900.0
rect_scale = Vector2( 0.188842, 0.199126 )
custom_fonts/font = SubResource( 4 )
text = "1. Make water
2. Add mushroom
3. Heat for 2 seconds
4. Shake well
5. Add crushed mushroom"
autowrap = true
